--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,14 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --text-color: #FF0070;
+  --text-title-color: #DB00FF;
+  --text-subtitle-color: #000028;
+  --text-p-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --hover-color: rgb(255 0 112 / 0.40);
+  --bg-image: url(../images/cover-image-dark.png);
+  --decor: "";
+  --decor-text: "REC";
 }
+
