--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,6 +4,7 @@
   --text-subtitle-color: #000028;
   --text-p-color: #F1B2CE;
   --accent-color: #FF0070;
+  --decor-color: #FF0070;
   --hover-color: rgb(255 0 112 / 0.40);
   --bg-image: url(../images/cover-image-dark.png);
   --decor: "";
