--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,6 @@
   block-size: 25px;
   border-inline-start: 1px solid var(--decor-color);
   border-block-end: 1px solid var(--decor-color);
-  align-self: end;
 }
 
 .header__decoration {
@@ -162,10 +161,12 @@
 
   .decorated-zone::after {
     left: 20px;
+    bottom: 40px;
   }
 
   .header__grid {
     grid-template-columns: 1fr 1fr;
+    margin-block-end: 40px;
   }
 
   .header__theme-menu {
@@ -281,7 +282,7 @@
 @media (width >= 768px) {
 
   .content {
-    margin: 60px 20px;
+    margin: 40px 20px 60px;
     gap: 80px;
   }
 
@@ -408,7 +409,6 @@
   .content__section:nth-of-type(3) {
     column-gap: 10px;
   }
-
 }
 
 .footer {
