--- a/styles/light.css
+++ b/styles/light.css
@@ -4,36 +4,116 @@
   переключая тему
 */
 
+:root.theme-light {
+  --text-color: #353430;
+  --text-title-color: #ffc2e6;
+  --text-subtitle-color: #353430;
+  --text-p-color: #353430;
+  --accent-color: #ff8dcb;
+  --decor-color: #353430;
+  --hover-color: rgb(50 49 45 / 0.4);
+  --bg-image: url(../images/cover-image-light.png);
+  --decor: none;
+  --decor-text: none;
+}
+
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --text-color: #353430;
-  --text-title-color: #FFC2E6;
-  --text-subtitle-color: #353430;
-  --text-p-color: #353430;
-  --accent-color: #FF8DCB;
-  --decor-color: #353430;
-  --hover-color: rgb(50 49 45 / 0.40);
   --bg-image: url(../images/cover-image-light.png);
-  --decor: none;
-  --decor-text: none;
+}
+
+.theme_light .header {
+  color: #353430;
+}
+
+.theme_light .decorated-zone::before {
+  border-inline-end: 1px solid #353430;
+  border-block-start: 1px solid #353430;
+}
+
+.theme_light .decorated-zone::after {
+  border-inline-start: 1px solid #353430;
+  border-block-end: 1px solid #353430;
+}
+
+.theme_light .header__decoration::before {
+  content: none;
+}
+
+.theme_light .header__decoration::after {
+  content: none;
+  background-color: #353430;
+}
+
+.theme_light .header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid #353430;
+}
+
+.theme_light .header__theme-menu-button:hover {
+  outline: rgb(50 49 45 / 0.4);
+}
+
+.theme_light .header__theme-menu-button_active {
+  outline: 1px solid #353430;
+}
+
+.theme_light .title {
+  color: #ffc2e6;
+  text-shadow: 4px 4px 0 #ff8dcb;
+}
+
+.theme_light .title-decor {
+  background-color: #ff8dcb;
+  color: #353430;
+}
+
+.theme_light .content__heading {
+  color: #353430;
+}
+
+.theme_light .content__link {
+  color: #353430;
+  text-shadow: 1px 1px 0 #ff8dcb;
+}
+
+.theme_light .content__link:visited {
+  color: #353430;
+}
+
+.theme_light .content__link:focus-visible {
+  outline: 1px solid #353430;
+}
+
+.theme_light .content__link:hover {
+  border-block-end: 1px solid #353430;
+}
+
+.theme_light .footer__title {
+  text-shadow: 2px 2px 0 #ff8dcb;
 }
 
 @media (prefers-color-scheme: light) {
 
   :root {
-  --text-color: #353430;
-  --text-title-color: #FFC2E6;
-  --text-subtitle-color: #353430;
-  --text-p-color: #353430;
-  --accent-color: #FF8DCB;
-  --decor-color: #353430;
-  --hover-color: rgb(50 49 45 / 0.40);
-  --bg-image: url(../images/cover-image-light.png);
-  --decor: none;
-  --decor-text: none;
-    }
+    --text-color: #353430;
+    --text-title-color: #ffc2e6;
+    --text-subtitle-color: #353430;
+    --text-p-color: #353430;
+    --accent-color: #ff8dcb;
+    --decor-color: #353430;
+    --hover-color: rgb(50 49 45 / 0.4);
+    --bg-image: url(../images/cover-image-light.png);
+    --decor: none;
+    --decor-text: none;
+  }
 }
 
+@media (width >= 1024px) {
+
+  .theme_light .title {
+    text-shadow: 4px 4px 0 #ff0070;
+  }
+}
