--- a/styles/dark.css
+++ b/styles/dark.css
@@ -18,11 +18,17 @@
 }
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
   background-image: url(../images/cover-image-dark.png);
+  --text-color: #ff0070;
+  --text-title-color: #db00ff;
+  --text-subtitle-color: #000028;
+  --text-p-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --decor-color: #ff0070;
+  --hover-color: rgb(255 0 112 / 0.4);
+  --bg-image: url(../images/cover-image-dark.png);
+  --decor: '';
+  --decor-text: 'REC';
 }
 
 .theme_dark .header {
