test - removed code from light.css

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   --text-color: #ff0070;
-  --text-title-color: #db00FF;
+  --text-title-color: #db00ff;
   --text-subtitle-color: #000028;
   --text-p-color: #f1b2ce;
   --accent-color: #ff0070;
