--- a/styles/dark.css
+++ b/styles/dark.css
@@ -22,4 +22,75 @@
   --bg-image: url(../images/cover-image-dark.png);
   --decor: '';
   --decor-text: 'REC';
+  background-image: var(--bg-image);
+}
+
+.theme_dark .header {
+  color: var(--text-color);
+}
+
+.theme_dark .decorated-zone::before {
+  border-inline-end: 1px solid var(--decor-color);
+  border-block-start: 1px solid var(--decor-color);
+}
+
+.theme_dark .decorated-zone::after {
+  border-inline-start: 1px solid var(--decor-color);
+  border-block-end: 1px solid var(--decor-color);
+}
+
+.theme_dark .header__decoration::before {
+  content: var(--decor-text);
+}
+
+.theme_dark .header__decoration::after {
+  content: var(--decor);
+  background-color: var(--decor-color);
+}
+
+.theme_dark .header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--decor-color);
+}
+
+.theme_dark .header__theme-menu-button:hover {
+  outline: 1px solid var(--hover-color);
+}
+
+.theme_dark .header__theme-menu-button_active {
+  outline: 1px solid var(--decor-color);
+}
+
+.theme_dark .title {
+  color: var(--text-title-color);
+  text-shadow: 4px 4px 0 var(--decor-color);
+}
+
+.theme_dark .title-decor {
+  background-color: var(--accent-color);
+  color: var(--text-subtitle-color);
+}
+
+.theme_dark .content__heading {
+  color: var(--text-color);
+}
+
+.theme_dark .content__link {
+  color: var(--text-p-color);
+  text-shadow: 1px 1px 0 var(--decor-color);
+}
+
+.theme_dark .content__link:visited {
+  color: var(--text-p-color);
+}
+
+.theme_dark .content__link:focus-visible {
+  outline: 1px solid var(--text-p-color);
+}
+
+.theme_dark .content__link:hover {
+  border-block-end: 1px solid var(--text-p-color);
+}
+
+.theme_dark .footer__title {
+  text-shadow: 2px 2px 0 var(--decor-color);
 }
