--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  background-image: var(--bg-image);
+  background-image: url(../images/cover-image-dark.png);
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -13,7 +13,7 @@
   block-size: 100vh;
   display: grid;
   position: relative;
-  color: var(--text-color);
+  color: #ff0070;
   font-size: 18px;
   margin: 10px;
 }
@@ -23,8 +23,8 @@
   position: absolute;
   inline-size: 25px;
   block-size: 25px;
-  border-inline-end: 1px solid var(--decor-color);
-  border-block-start: 1px solid var(--decor-color);
+  border-inline-end: 1px solid #ff0070;
+  border-block-start: 1px solid #ff0070;
   justify-self: end;
 }
 
@@ -34,8 +34,8 @@
   bottom: 20px;
   inline-size: 25px;
   block-size: 25px;
-  border-inline-start: 1px solid var(--decor-color);
-  border-block-end: 1px solid var(--decor-color);
+  border-inline-start: 1px solid #ff0070;
+  border-block-end: 1px solid #ff0070;
 }
 
 .header__decoration {
@@ -46,15 +46,15 @@
 }
 
 .header__decoration::before {
-  content: var(--decor-text);
+  content: 'REC';
 }
 
 .header__decoration::after {
-  content: var(--decor);
+  content: '';
   inline-size: 9px;
   block-size: 9px;
   margin-block-start: 8px;
-  background-color: var(--text-color);
+  background-color: #ff0070;
   border-radius: 100%;
   box-shadow: 0 0 4px 2px;
 }
@@ -99,15 +99,15 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid var(--decor-color);
+  border-block-end: 1px solid #ff0070;
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid var(--hover-color);
+  outline: 1px solid #ff0070;
 }
 
 .header__theme-menu-button_active {
-  outline: 1px solid var(--decor-color);
+  outline: 1px solid #ff0070;
   pointer-events: none;
 }
 
@@ -116,8 +116,8 @@
 }
 
 .title {
-  color: var(--text-title-color);
-  text-shadow: 4px 4px 0 var(--accent-color);
+  color: #db00ff;
+  text-shadow: 4px 4px 0 #ff0070;
   font-family: 'IBM Plex Mono';
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-weight: 700;
@@ -140,8 +140,8 @@
 }
 
 .title-decor {
-  background-color: var(--accent-color);
-  color: var(--text-subtitle-color);
+  background-color: #ff0070;
+  color: #000028;
   font-size: 18px;
   font-weight: 700;
   line-height: 23.4px;
@@ -197,10 +197,6 @@
     padding: 0;
   }
 
-  .title {
-    text-shadow: 4px 4px 0 #ff0070;
-  }
-
   .header__subtitle {
     margin-inline-start: 10px;
   }
@@ -219,7 +215,7 @@
 }
 
 .content__heading {
-  color: var(--text-color);
+  color: #ff0070;
   margin: 0 0 20px;
   font-size: 18px;
 }
@@ -233,7 +229,7 @@
 }
 
 .content__article-p {
-  color: var(--text-p-color);
+  color: #f1b2ce;
   margin: 0;
   line-height: 23.4px;
 }
@@ -244,13 +240,13 @@
 }
 
 .content__link {
-  color: var(--text-p-color);
-  text-shadow: 1px 1px 0 var(--accent-color);
+  color: #f1b2ce;
+  text-shadow: 1px 1px 0 #ff0070;
   text-decoration: none;
 }
 
 .content__link:visited {
-  color: var(--text-p-color);
+  color: #f1b2ce;
 }
 
 .content__link:focus {
@@ -258,11 +254,11 @@
 }
 
 .content__link:focus-visible {
-  outline: 1px solid var(--text-p-color);
+  outline: 1px solid #f1b2ce;
 }
 
 .content__link:hover {
-  border-block-end: 1px solid var(--text-p-color);
+  border-block-end: 1px solid #f1b2ce;
 }
 
 .content__section-images {
@@ -416,7 +412,7 @@
 }
 
 .footer__title {
-  text-shadow: 2px 2px 0 var(--accent-color);
+  text-shadow: 2px 2px 0 #ff0070;
 }
 
 .footer.decorated-zone::before {
