--- a/styles/style.css
+++ b/styles/style.css
@@ -12,26 +12,29 @@
 .header {
   block-size: 100vh;
   display: grid;
+  grid-template-rows: 1fr auto 1fr;
   position: relative;
   color: var(--text-color);
   font-size: 18px;
-  margin: 10px;
+  margin: 0 10px 10px;
 }
 
 .decorated-zone::before {
   content: "";
   position: absolute;
+  top: 10px;
+  right: 0;
   inline-size: 25px;
   block-size: 25px;
   border-inline-end: 1px solid var(--decor-color);
   border-block-start: 1px solid var(--decor-color);
-  justify-self: end;
 }
 
 .decorated-zone::after {
   content: "";
   position: absolute;
-  bottom: 20px;
+  bottom: 10px;
+  left: 0;
   inline-size: 25px;
   block-size: 25px;
   border-inline-start: 1px solid var(--decor-color);
@@ -40,6 +43,7 @@
 
 .header__decoration {
   position: absolute;
+  top: 10px;
   right: 10px;
   display: flex;
   gap: 10px;
@@ -118,7 +122,6 @@
 .title {
   color: var(--text-title-color);
   text-shadow: 4px 4px 0 var(--accent-color);
-  font-family: 'IBM Plex Mono';
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-weight: 700;
   line-height: 0.825;
@@ -126,16 +129,8 @@
 }
 
 .header__subtitle {
-  display: flex;
-  block-size: fit-content;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  justify-self: end;
   align-self: center;
-}
-
-.header__subtitle-item {
+  margin-block-end: 10px;
   inline-size: clamp(22.188rem, 2.29vw + 21.651rem, 22.75rem);
 }
 
@@ -145,27 +140,34 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 23.4px;
-  margin: 0;
 }
 
 @media (width >= 768px) {
 
   .header {
-    margin: 20px 20px 20px 0;
+    margin: 0 20px 20px 0;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .decorated-zone::before {
+    top: 20px;
   }
 
   .decorated-zone::after {
     left: 20px;
-    bottom: 40px;
+    bottom: 20px;
   }
 
-  .header__grid {
-    grid-template-columns: 1fr 1fr;
-    margin-block-end: 40px;
+  .header__decoration {
+    top: 20px;
   }
 
   .header__theme-menu {
     grid-column: 1 / span 2;
+  }
+
+  .header__theme-menu-list {
+    margin-block-start: 10px;
   }
 
   .header__title {
@@ -174,7 +176,8 @@
 
   .header__subtitle {
     grid-column: 2;
-    margin-inline-start: 20px;
+    justify-self: end;
+    margin-block-end: 20px;
   }
 
   .title {
@@ -189,6 +192,7 @@
     justify-content: center;
     align-items: start;
     margin-inline-start: 20px;
+    margin-block-start: 10px;
   }
 
   .header__theme-menu-list {
@@ -198,11 +202,7 @@
   }
 
   .header__subtitle {
-    margin-inline-start: 10px;
-  }
-
-  .header__subtitle-item {
-    inline-size: 100%;
+    inline-size: 98%;
   }
 }
 
@@ -210,7 +210,7 @@
   display: grid;
   grid-template-rows: repeat(4, minmax(min-content, max-content));
   gap: 50px;
-  margin: 30px 10px 40px;
+  margin: 40px 10px;
   font-size: 18px;
 }
 
@@ -234,7 +234,7 @@
   line-height: 23.4px;
 }
 
-.content__heading-h4.title-decor {
+.content__heading-h4 {
   font-weight: 400;
   margin-block: 20px 10px;
 }
@@ -261,9 +261,13 @@
   border-block-end: 1px solid var(--text-p-color);
 }
 
-.content__section-images {
+.content__section_images {
   display: grid;
   gap: 10px;
+}
+
+.content__section_images .content__heading-h3 {
+  margin-block: 0;
 }
 
 .content__image {
@@ -273,7 +277,7 @@
 @media (width >= 768px) {
 
   .content {
-    margin: 40px 20px 60px;
+    margin: 60px 20px;
     gap: 80px;
   }
 
@@ -282,67 +286,49 @@
     gap: 20px;
   }
 
-  .content__heading {
-    margin: 0;
-  }
-
-  .content__section:nth-of-type(1) {
+  .content__section_2x2 {
     grid-template-columns: 1fr 2fr;
     grid-template-rows: repeat(2, minmax(min-content, max-content));
   }
 
-  .content__heading:nth-of-type(1) {
-    grid-row: 1 / span 2;
+  .content__heading {
+    margin: 0;
+  }
+
+  .content__section_2x2 .content__heading {
+    grid-row: 1 / -1;
   }
 
   .content__heading-h3 {
     margin-block: 0 10px;
   }
 
-  .content__section:nth-of-type(2) {
+  .content__section_tablet {
     grid-template-rows: repeat(4, minmax(min-content, max-content));
-    grid-template-columns: 1fr 2fr;
-    grid-template-areas:
-      "header ."
-      "content1 content1"
-      "content2 content2"
-      "content3 content3";
   }
 
-  .content__section:nth-of-type(2) .content__heading {
-    grid-area: header;
+  .content__section_tablet .content__heading {
+    inline-size: calc(100vw / 3 - 20px);
   }
 
-  .content__section:nth-of-type(2) .content__article:nth-of-type(1) {
-    grid-area: content1;
-  }
-
-  .content__section:nth-of-type(2) .content__article:nth-of-type(2) {
-    grid-area: content2;
-  }
-
-  .content__section:nth-of-type(2) .content__article:nth-of-type(3) {
-    grid-area: content3;
-  }
-
-  .content__section:nth-of-type(3) {
+  .content__section_2x6 {
     grid-template-columns: 1fr 2fr;
     grid-template-rows: repeat(6, minmax(min-content, max-content));
   }
 
-  .content__section:nth-of-type(3) .content__heading {
+  .content__section_2x6 .content__heading {
     grid-row: 1 / -1;
   }
 
-  .content__section:nth-of-type(3) .content__heading-h3 {
+  .content__section_2x6 .content__heading-h3 {
     margin: 0;
   }
 
-  .content__section:nth-of-type(3) .content__heading-h4 {
-    margin: 0 0 10px;
+  .content__section_2x6 .content__heading-h4 {
+    margin-block: 0 10px;
   }
 
-  .content__section-images {
+  .content__section_images {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto fit-content(260px) fit-content(315px) 1fr;
     grid-template-areas:
@@ -353,51 +339,52 @@
     gap: 20px;
   }
 
-  .content__section-images .content__heading-h3 {
+  .content__section_images .content__heading-h3 {
     grid-area: images-header;
+    margin: 0;
   }
 
-  .content__section-images .content__image:nth-of-type(1) {
+  .content__section_images .content__image_sunset {
     grid-area: sunset;
   }
 
-  .content__section-images .content__image:nth-of-type(2) {
+  .content__section_images .content__image_icecream {
     grid-area: icecream;
     block-size: 100%;
     object-fit: cover;
   }
 
-  .content__section-images .content__image:nth-of-type(3) {
+  .content__section_images .content__image_tape {
     grid-area: tape;
     block-size: 100%;
     object-fit: cover;
   }
 
-  .content__section-images .content__image:nth-of-type(4) {
+  .content__section_images .content__image_books {
     grid-area: books;
   }
 
-  .content__section-images .content__image:nth-of-type(5) {
+  .content__section_images .content__image_street {
     grid-area: street;
   }
 }
 
 @media (width >= 1024px) {
 
-  .content__section:nth-of-type(1) {
+  .content__section_2x2 {
     column-gap: 10px;
   }
 
-  .content__section:nth-of-type(2) {
+  .content__section_desktop {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: minmax(min-content, max-content) 1fr;
-    grid-template-areas:
-    "header . ."
-    "content1 content2 content3"
-    "content1 content2 content3";
   }
 
-  .content__section:nth-of-type(3) {
+  .content__section_desktop .content__heading {
+    grid-column: 1 / -1;
+  }
+
+  .content__section_2x6 {
     column-gap: 10px;
   }
 }
@@ -405,7 +392,7 @@
 .footer {
   display: flex;
   block-size: 100vh;
-  margin: 10px;
+  margin: 10px 10px 0;
   justify-content: center;
   align-items: center;
   position: relative;
@@ -429,7 +416,7 @@
 @media (width >= 768px) {
 
   .footer {
-    margin: 20px;
+    margin: 20px 20px 0;
   }
 
   .footer.decorated-zone::before {
